# nscfg2ply

./: README.md  pyproject.toml
convertCLI/: cli_main.py
convertPY/cameras/: camera_utils.py  cameras.py
convertPY/data/datamanagers/: base_datamanager.py  full_images_datamanager.py
convertPY/data/dataparsers/: base_dataparser.py  colmap_dataparser.py  nerfstudio_dataparser.py
convertPY/data/datasets/: base_dataset.py
convertPY/data/utils/: dataloaders.py  nerfstudio_collate.py
convertPY/main/: convert_main.py  utils_main.py
convertPY/models/: base_model.py  splatfacto.py
convertPY/pipelines/: base_pipeline.py
convertPY/utils/: scene_box.py  tensor_dataclass.py
convertUTILS/: utils.py
