[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nscfg2ply"
version = "0.0.1"
description = "convert nerstudio model config files to ply"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

dependencies = [
  "jaxtyping<=0.2.19",
  "numpy<=1.23.5",       
  "matplotlib<3.8",
  "opencv-python<4.9",
  "Pillow<10.0",
  "plyfile<=1.1",
  "PyYAML>=6.0",
  "rich>=13.0",
  "scikit-learn<1.3",
  "transformers<4.40",   
  "typing_extensions>=4.6"
]

[project.urls]
"Homepage" = "https://github.com/db-githb/nscfg2ply"

[project.scripts]
nscfg2ply = "convertCLI.cli_main:main"

[tool.setuptools.packages.find]
include = ["convertCLI*", "convertPY*", "convertUTILS*"]
